--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -18,6 +18,15 @@
             <div class="post-content">
                 <p>{{blog.shortDescription}}</p>
                 <img src="{{blog.image}}" alt="{{blog.title}}">
+                {{#if blog.audioLink}}
+                <audio controls>
+                
+                    <source
+                        src="audioLink"
+                        type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                {{/if}}
                 {{{blog.description}}}
                 <blockquote>
                     <p>{{blog.shortDescription}}</p>
