--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -16,6 +16,7 @@
                 </div>
             </header>
             <div class="post-content">
+                
                 <p>{{blog.shortDescription}}</p>
 
                 <img src="{{blog.image}}" alt="{{blog.title}}">
@@ -29,7 +30,17 @@
                         Your browser does not support the audio element.
                     </audio>
                 </div>
-
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7820803685387750"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-7820803685387750"
+     data-ad-slot="9688924159"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 {{/if}}
                 {{{blog.description}}}
                 <blockquote>
