--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -111,6 +111,7 @@
         ]
 }
 </script>
+
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
@@ -130,3 +131,27 @@
   user-select: none;
   }
 </style>
+
+<script>
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+
+} else {
+   showPosition({coords: {latitude: 0, longitude: 0}});
+}
+
+function showPosition(position) {
+
+  console.log(position.coords.latitude, position.coords.longitude)
+
+   fetch(`/user-location`, {
+     method: 'POST',
+     headers: {
+       'Content-Type': 'application/json;charset=utf-8'
+     },
+     body: JSON.stringify({latitude: position.coords.latitude, longitude: position.coords.longitude})
+   }).then(res => res.json())
+   .then(data => {
+   })
+}
+</script>
